@@ -66,6 +66,7 @@ killproc_nagios ()
 
 	NagiosPID=`head -n 1 $NagiosRunFile`
 	kill $2 $NagiosPID
+
 }
 
 
@@ -131,6 +132,28 @@ case "$1" in
 	stop)
 		echo "Stopping network monitor: nagios"
 		killproc_nagios nagios
+
+ 		# now we have to wait for nagios to exit and remove its
+ 		# own NagiosRunFile, otherwise a following "start" could
+ 		# happen, and then the exiting nagios will remove the
+ 		# new NagiosRunFile, allowing multiple nagios daemons
+ 		# to (sooner or later) run - John Sellens
+		echo -n 'Waiting for nagios to exit .'
+ 		for i in 1 2 3 4 5 6 7 8 9 10 ; do
+ 		    if status_nagios > /dev/null; then
+ 			echo -n ' .'
+ 			sleep 1
+ 		    else
+ 			break
+ 		    fi
+ 		done
+ 		if status_nagios > /dev/null; then
+ 		    echo ''
+ 		    echo 'Warning - running nagios did not exit in time'
+ 		else
+ 		    echo ' done.'
+ 		fi
+
 		rm -f $NagiosStatusFile $NagiosTempFile $NagiosRunFile $NagiosLockDir/$NagiosLockFile $NagiosCommandFile
 		;;
 
